// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`folder snapshot test 1`] = `
<DndProvider
  backend={[Function]}
>
  <LinkMobile
    draggingId={0}
    dropElement={[MockFunction]}
    id={0}
    item={
      Object {
        "label": "example.com",
        "type": "folder",
      }
    }
    openFolder={[MockFunction]}
    saveDraggingId={[MockFunction]}
    setClicked={[MockFunction]}
    setShiftClicked={[MockFunction]}
  >
    <div
      className="menu-item"
      onClick={[Function]}
      style={Object {}}
    >
      <FolderSubDrop
        dropElement={[MockFunction]}
        id={0}
        label="example.com"
      >
        <div
          className="menu-item-content"
        >
          <img
            alt="folder"
            className="icon"
            src="folder.png"
          />
          example.com
        </div>
      </FolderSubDrop>
      <img
        alt="drag section"
        className="icon dragIcon"
        src="mobile_drag.png"
      />
    </div>
  </LinkMobile>
</DndProvider>
`;

exports[`folder snapshot test 2`] = `
<DndProvider
  backend={[Function]}
>
  <LinkMobile
    draggingId={0}
    dropElement={[MockFunction]}
    id={0}
    item={
      Object {
        "clicked": true,
        "label": "example.com",
        "type": "folder",
      }
    }
    openFolder={[MockFunction]}
    saveDraggingId={[MockFunction]}
    setClicked={[MockFunction]}
    setShiftClicked={[MockFunction]}
  >
    <div
      className="menu-item"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "lightgray",
        }
      }
    >
      <FolderSubDrop
        dropElement={[MockFunction]}
        id={0}
        label="example.com"
      >
        <div
          className="menu-item-content"
        >
          <img
            alt="folder"
            className="icon"
            src="folder.png"
          />
          example.com
        </div>
      </FolderSubDrop>
      <img
        alt="drag section"
        className="icon dragIcon"
        src="mobile_drag.png"
      />
    </div>
  </LinkMobile>
</DndProvider>
`;

exports[`link snapshot test 1`] = `
<DndProvider
  backend={[Function]}
>
  <LinkMobile
    draggingId={0}
    dropElement={[MockFunction]}
    id={0}
    item={
      Object {
        "label": "example.com",
        "link": "http://example.com",
        "type": "link",
      }
    }
    openFolder={[MockFunction]}
    saveDraggingId={[MockFunction]}
    setClicked={[MockFunction]}
    setShiftClicked={[MockFunction]}
  >
    <a
      href="http://example.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        className="menu-item"
        style={Object {}}
      >
        <img
          alt="link"
          className="icon"
          hidden={false}
          src="default.png"
        />
        <img
          alt="link"
          className="icon"
          hidden={true}
          onLoad={[Function]}
          src="https://www.google.com/s2/favicons?domain=http://example.com"
        />
        example.com
        <img
          alt="drag section"
          className="icon dragIcon"
          src="mobile_drag.png"
        />
      </div>
    </a>
  </LinkMobile>
</DndProvider>
`;

exports[`link snapshot test 2`] = `
<DndProvider
  backend={[Function]}
>
  <LinkMobile
    draggingId={0}
    dropElement={[MockFunction]}
    id={0}
    item={
      Object {
        "clicked": true,
        "label": "example.com",
        "link": "http://example.com",
        "type": "link",
      }
    }
    openFolder={[MockFunction]}
    saveDraggingId={[MockFunction]}
    setClicked={[MockFunction]}
    setShiftClicked={[MockFunction]}
  >
    <a
      href="http://example.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        className="menu-item"
        style={
          Object {
            "backgroundColor": "lightgray",
          }
        }
      >
        <img
          alt="link"
          className="icon"
          hidden={false}
          src="default.png"
        />
        <img
          alt="link"
          className="icon"
          hidden={true}
          onLoad={[Function]}
          src="https://www.google.com/s2/favicons?domain=http://example.com"
        />
        example.com
        <img
          alt="drag section"
          className="icon dragIcon"
          src="mobile_drag.png"
        />
      </div>
    </a>
  </LinkMobile>
</DndProvider>
`;
